added some code

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "corporate-project",
   "version": "0.1.0",
+  "homepage": "http://mywebsite.com/relativepath",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
